# sunclass

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
src/sunclass/: cli.py  comparator.py  config.py  logging_setup.py  models.py  state.py
src/sunclass/fetchers/: base.py  ical.py  sunclass.py
src/sunclass/notifiers/: __init__.py  _format.py  base.py  stdout.py  telegram.py
tests/: test_comparator.py  test_ical_fetcher.py  test_sunclass_scraper.py
tests/fixtures/: sample.ics
