[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sunclass-monitor"
version = "0.1.0"
description = "Reservation discrepancy monitor for Sunclass Durbuy"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0",
    "requests>=2.31",
    "icalendar>=5.0",
    "playwright>=1.44",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "responses>=0.25",
]

[project.scripts]
sunclass-monitor = "sunclass.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sunclass"]
